--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,15 +6,21 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.2 <4.0.0'
+  sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  http: ^1.0.0
+  cupertino_icons: ^1.0.5
+  http: ^0.13.6
   get: ^4.6.5
+  flutter_chat_ui: ^1.6.8
+  file_picker: ^5.3.2
+  image_picker: ^0.8.7+5
+  mime: ^1.0.4
+  open_filex: ^4.3.2
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
