--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,17 @@ dependencies:
   mime: ^1.0.4
   open_filex: ^4.3.2
   uuid: ^3.0.7
+  equatable: ^2.0.5
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.4
+  freezed: ^2.3.4
+  json_serializable: ^6.7.0
 
 flutter:
   uses-material-design: true
