--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   equatable: ^2.0.5
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
+  flutter_secure_storage: ^8.0.0
+  retrofit: ^4.0.1
+  retrofit_generator: ^7.0.1
+  dio: ^5.1.2
+  json_serializable: ^6.7.0
 
 dev_dependencies:
   flutter_test:
@@ -31,7 +36,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.4
   freezed: ^2.3.4
-  json_serializable: ^6.7.0
 
 flutter:
   uses-material-design: true
