--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.5
   http: ^0.13.6
   get: ^4.6.5
   flutter_chat_ui: ^1.6.8
-  file_picker: ^5.3.2
-  image_picker: ^0.8.7+5
   mime: ^1.0.4
   open_filex: ^4.3.2
   uuid: ^3.0.7
@@ -31,16 +30,39 @@ dependencies:
   json_serializable: ^6.7.0
   flutter_dotenv: ^5.0.2
   jwt_decoder: ^2.0.1
+  auto_size_text: ^3.0.0
+  flutter_animate: ^4.1.1+1
+  flutter_cache_manager: ^3.3.0
+  cached_network_image: ^3.2.3
+  font_awesome_flutter: ^10.4.0
+  from_css_color: ^2.0.0
+  google_fonts: ^4.0.4
+  intl: ^0.18.0
+  json_path: ^0.6.0
+  mime_type: ^1.0.0
+  page_transition: ^2.0.9
+  shared_preferences: ^2.1.1
+  table_calendar: ^3.0.9
+  timeago: ^3.4.0
+  url_launcher: ^6.1.9
+  url_launcher_ios: ^6.1.4
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   build_runner: ^2.4.4
-  freezed: ^2.3.4
 
 flutter:
   assets:
     - assets/.env.dev
     - assets/.env.prod
+    - assets/fonts/
+    - assets/images/
+    - assets/videos/
+    - assets/audios/
+    - assets/lottie_animations/
+    - assets/rive_animations/
+    - assets/pdfs/
   uses-material-design: true
