chore: clean build

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,8 +27,6 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 
 flutter_ios_podfile_setup
 
-platform :ios, '11.0'
-
 target 'Runner' do
   use_frameworks!
   use_modular_headers!
@@ -40,12 +38,7 @@ target 'Runner' do
 end
 
 post_install do |installer|
-    installer.generated_projects.each do |project|
-        project.targets.each do |target|
-            target.build_configurations.each do |config|
-                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
-            end
-        end
-    end
+  installer.pods_project.targets.each do |target|
+    flutter_additional_ios_build_settings(target)
+  end
 end
-
